Step.03-Exercise-Using-Retrofit-With-Coroutines The goal of this exercise is to integrate Coroutines with Retrofit using the Retrofit Coroutines Adapter.  Along the way, we'll learn about Deferred and await().

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+
+    // TODO (01) Add dependencies for both Coroutines and for the Retrofit Coroutines Adapter
 }
