Step.03-Solution-Using-Retrofit-With-Coroutines The goal of this exercise is to integrate Coroutines with Retrofit using the Retrofit Coroutines Adapter.  Along the way, we'll learn about Deferred and await().

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,10 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 
-    // TODO (01) Add dependencies for both Coroutines and for the Retrofit Coroutines Adapter
+    // Coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
+
+    // Retrofit Coroutines Support
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
 }
