--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,5 +79,6 @@ dependencies {
     // Retrofit Coroutines Support
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
 
-    // TODO (01) Add the Glide library dependency
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$version_glide"
 }
