--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,6 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$version_glide"
 
-    // TODO (01) Add the Gradle dependency for the RecyclerView
+    // RecyclerView
+    implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
 }
