Step.01-Solution-Making-Mars-Web-Service-Contact The first step in exploring our Mars app is to use Retrofit to connect to the Mars server and display the response raw JSON or the error returned.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,7 @@ dependencies {
     // Core with Ktx
     implementation "androidx.core:core-ktx:$version_core"
 
-    // TODO (01) Add Dependencies for Retrofit with the Scalar Converter
+    // Retrofit with Scalar Converters
+    implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
 }
