Step.02-Solution-Parsing-JSON-With-Moshi Have Retrofit use Moshi to parse the JSON from our web service into useful Kotlin data objects.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,9 +64,11 @@ dependencies {
     // Core with Ktx
     implementation "androidx.core:core-ktx:$version_core"
 
-    // TODO (01) Add Dependencies for Moshi
+    // Moshi
+    implementation "com.squareup.moshi:moshi:$version_moshi"
+    implementation "com.squareup.moshi:moshi-kotlin:$version_moshi"
 
-    // Retrofit with Scalar Converters
+    // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
-    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 }
