Step.01-Exercise-Making-Mars-Web-Service-Contact The first step in exploring our Mars app is to use Retrofit to connect to the Mars server and display the response raw JSON or the error returned.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
 
     // Core with Ktx
     implementation "androidx.core:core-ktx:$version_core"
+
+    // TODO (01) Add Dependencies for Retrofit with the Scalar Converter
 }
