--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.marsrealestate">
 
+    <!-- TODO (06) Add the Internet permission to the app -->
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
