replaced Scalar Converter to Moshi, added dependencies, MarsProperty, Used Moshi Builder to create a Moshi object with the KotlinJsonAdapterFactory

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
     // Retrofit with Scalar Converter
     implementation "com.squareup.retrofit2:retrofit: $version_retrofit"
-    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+//    implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
 
     // Dependencies for Moshi
