Added Glide and invironment to Display an Internet image

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version_kotlin_coroutines"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version_kotlin_coroutines"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
+
+    // Glide library
+    implementation "com.github.bumptech.glide:glide:$version_glide"
 }
