--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,8 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.example.android.marsrealestate.utilities.RxIdlerTestRunner"
     }
     buildTypes {
         release {
@@ -83,4 +84,12 @@ dependencies {
 
     // Recyclerview
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
+
+    // Espresso
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
+    androidTestImplementation 'androidx.test:rules:1.3.0-alpha02'
+
+    // RxIdler
+    androidTestImplementation 'com.squareup.rx.idler:rx2-idler:0.9.1'
+
 }
