--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,10 @@ buildscript {
         version_kotlin = "1.3.72"
         version_kotlin_coroutines = "1.3.7"
         version_lifecycle_extensions = "2.2.0"
-        version_moshi = "1.8.0"
+        version_lifecycle = "2.2.0"
+        version_moshi = "1.9.3"
         version_navigation = "1.0.0"
-        version_retrofit = "2.5.0"
+        version_retrofit = "2.9.0"
         version_retrofit_coroutines_adapter = "0.9.2"
         version_recyclerview = "1.2.0-alpha05"
     }
