Update version_lifecycle in build.gradle for lifecycle-viewmodel-ktx

--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         version_glide = "4.8.0"
         version_kotlin = "1.3.72"
         version_kotlin_coroutines = "1.3.7"
-        version_lifecycle_extensions = "2.2.0"
+        version_lifecycle = "2.2.0"
         version_moshi = "1.8.0"
         version_navigation = "1.0.0"
         version_retrofit = "2.5.0"
