--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    
     ext {
         // Versions for all the dependencies we plan to use. It's particularly useful for kotlin and
         // navigation where the versions of the plugin needs to be the same as the version of the
@@ -11,7 +12,7 @@ buildscript {
         version_glide = "4.8.0"
         version_kotlin = "1.3.72"
         version_kotlin_coroutines = "1.3.7"
-        version_lifecycle_extensions = "2.2.0"
+        version_lifecycle = "2.2.0"
         version_moshi = "1.8.0"
         version_navigation = "1.0.0"
         version_retrofit = "2.5.0"
