Added Glide dependency in app:build.gradle file.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,7 +90,7 @@ dependencies {
     // implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
 
     // Glide
-    // implementation "com.github.bumptech.glide:glide:$version_glide"
+    implementation "com.github.bumptech.glide:glide:$version_glide"
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
