Uncomment Retrofit/Scalar Lib

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,8 +76,8 @@ dependencies {
 
     
     // Retrofit - Deprecated plugins - No more required
-    // implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
-    // implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
+     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
+     implementation "com.squareup.retrofit2:converter-scalars:$version_retrofit"
 
     // Retrofit with Moshi Converter
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
@@ -94,4 +94,8 @@ dependencies {
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
+
+
+
+
 }
